catkin_ws/logs/darknet_ros/build.make.000.log.stderr
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
In file included from /usr/include/cuda_runtime.h:83,
                 from <command-line>:
/usr/include/crt/host_config.h:138:2: error: #error -- unsupported GNU version! gcc versions later than 8 are not supported!
  138 | #error -- unsupported GNU version! gcc versions later than 8 are not supported!
      |  ^~~~~
CMake Error at darknet_ros_lib_generated_blas_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_blas_kernels.cu.o


CMake Error at darknet_ros_lib_generated_col2im_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_col2im_kernels.cu.o


make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:93: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_blas_kernels.cu.o] Error 1
make[2]: *** Se espera a que terminen otras tareas....
make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:107: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_col2im_kernels.cu.o] Error 1
CMake Error at darknet_ros_lib_generated_activation_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_activation_kernels.cu.o


make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:65: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_activation_kernels.cu.o] Error 1
CMake Error at darknet_ros_lib_generated_im2col_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_im2col_kernels.cu.o


make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:114: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_im2col_kernels.cu.o] Error 1
CMake Error at darknet_ros_lib_generated_deconvolutional_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_deconvolutional_kernels.cu.o


make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:86: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_deconvolutional_kernels.cu.o] Error 1
CMake Error at darknet_ros_lib_generated_maxpool_layer_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_maxpool_layer_kernels.cu.o


CMake Error at darknet_ros_lib_generated_convolutional_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_convolutional_kernels.cu.o


make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:121: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_convolutional_kernels.cu.o] Error 1
make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:128: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_maxpool_layer_kernels.cu.o] Error 1
CMake Error at darknet_ros_lib_generated_crop_layer_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_crop_layer_kernels.cu.o


make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:72: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_crop_layer_kernels.cu.o] Error 1
CMake Error at darknet_ros_lib_generated_dropout_layer_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_dropout_layer_kernels.cu.o


make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:100: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_dropout_layer_kernels.cu.o] Error 1
CMake Error at darknet_ros_lib_generated_avgpool_layer_kernels.cu.o.Release.cmake:220 (message):
  Error generating
  /home/germanrv/catkin_ws/build/darknet_ros/CMakeFiles/darknet_ros_lib.dir/__/darknet/src/./darknet_ros_lib_generated_avgpool_layer_kernels.cu.o


make[2]: *** [CMakeFiles/darknet_ros_lib.dir/build.make:79: CMakeFiles/darknet_ros_lib.dir/__/darknet/src/darknet_ros_lib_generated_avgpool_layer_kernels.cu.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:783: CMakeFiles/darknet_ros_lib.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
